--- a/src/www/index.html
+++ b/src/www/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>DNN webportal</title>
-    <meta name="description" content="Google's material design UI components built with React.">
+    <meta name="description" content="ITRI DNN webportal">
 
     <!-- Use minimum-scale=1 to enable GPU rasterization -->
     <meta
@@ -12,6 +12,7 @@
       content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1"
     >
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="shortcut icon" href="./image/icon_big.png">
   </head>
 
   <body>
