change web icon

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -12,7 +12,7 @@
       content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1"
     >
     <link rel="stylesheet" type="text/css" href="main.css">
-    <link rel="shortcut icon" href="./image/icon_big.png">
+    <link rel="shortcut icon" href="./image/dnnIcon.png">
   </head>
 
   <body>
