take off bundle.js in index.html

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -349,5 +349,6 @@ W?!!!!!!/?!|!!!!!!||||||||]G!!!!!!!!!3@MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
 
 -->
     <script src="app.js"></script>
+    <!-- <script src="bundle.js"></script> -->
   </body>
 </html>
