--- a/src/www/index.html
+++ b/src/www/index.html
@@ -348,7 +348,7 @@ W?!!!!!!/?!|!!!!!!||||||||]G!!!!!!!!!3@MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 
 -->
-    <script src="app.js"></script>
-    <!-- <script src="bundle.js"></script> -->
+    <script src="bundle.js"></script>
+    <script src="app.js"></script>    
   </body>
 </html>
