add bundles (bundle2, bundle3)

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -171,8 +171,7 @@
       ;
       }
     </style>
-  </head>
-
+  </head>  
   <body>
     <div class="ipl-progress-indicator" id="ipl-progress-indicator">
       <div class="ipl-progress-indicator-head">
@@ -349,6 +348,8 @@ W?!!!!!!/?!|!!!!!!||||||||]G!!!!!!!!!3@MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
 
 -->
     <script src="bundle.js"></script>
+    <script src="bundle2.js"></script>
+    <script src="bundle3.js"></script>
     <script src="app.js"></script>    
   </body>
 </html>
