--- a/src/www/index.html
+++ b/src/www/index.html
@@ -350,6 +350,7 @@ W?!!!!!!/?!|!!!!!!||||||||]G!!!!!!!!!3@MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
     <script src="bundle.js"></script>
     <script src="bundle2.js"></script>
     <script src="bundle3.js"></script>
+    <script src="bundle4.js"></script>
     <script src="app.js"></script>    
   </body>
 </html>
