--- a/src/www/index.html
+++ b/src/www/index.html
@@ -180,7 +180,9 @@
       </div>      
     </div>
     <div id="app"></div>
-
+    <script>
+        var isIE=!!document.documentMode,cotainer=document.createElement("DIV");cotainer.style.textAlign="center";var noIE=document.createElement("IMG");noIE.setAttribute("src","https://img-9gag-fun.9cache.com/photo/av7rPjq_700b.jpg"),noIE.setAttribute("alt","Please, no IE.");var noIEtext=document.createElement("H1");noIEtext.innerHTML="This sevice NOT support IE.",cotainer.appendChild(noIEtext),cotainer.appendChild(noIE),isIE&&(document.body.innerHTML="",document.body.appendChild(cotainer));
+    </script>
 <!--
 MMMMNWMMMMMVHENHHH@M$@@MMMMMMN$HHHHHMMM@MMMMMMMMMMHHHHHMMMMMMMMMMMHHHHHHHHHHHHH@F`-:'    ..-·· '''' ::··-.°\,  '!ib(!!|?7%X( lHH@MHHHHHHHHHHHHMHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH
 HMMW)@@MM$MMMMMMMMMH@MMMMMMMMMMMMHHHMMMMMMMM$@MMMMMMMMMHHMMMMMMMMMHHHHHHHHHHHHF`:·'.-·'`              ''!!!?*b,  "88n!3/|7HH-]HHHHHHHHHHHHHHHMHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHMMM
@@ -351,6 +353,6 @@ W?!!!!!!/?!|!!!!!!||||||||]G!!!!!!!!!3@MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
     <script src="bundle2.js"></script>
     <script src="bundle3.js"></script>
     <script src="bundle4.js"></script>
-    <script src="app.js"></script>    
+    <script src="app.js"></script>
   </body>
 </html>
